Use new Collection methods added in Java 9