@@ -19,7 +19,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -54,7 +53,7 @@ public class DeploymentRequest
 
     public List<DependencyDescriptor> getDependencies()
     {
-        return Collections.unmodifiableList( dependencies );
+        return List.copyOf( dependencies );
     }
 
     public void addDependency( Artifact dependencyArtifact, Artifact... exclusions )
@@ -86,7 +85,7 @@ public class DeploymentRequest
 
     public Map<String, String> getProperties()
     {
-        return Collections.unmodifiableMap( properties );
+        return Map.copyOf( properties );
     }
 
     public String getProperty( String key )
