@@ -25,7 +25,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 
@@ -275,7 +274,7 @@ public class XMvnMojoExecutionListener
         }
         else if ( XMVN_BUILDDEP.equals( execution ) )
         {
-            trySetBeanProperty( mojo, "resolutions", Collections.unmodifiableList( new ArrayList<>( resolutions ) ) );
+            trySetBeanProperty( mojo, "resolutions", List.copyOf( resolutions ) );
         }
     }
 
